# SpatialNode

./: .pre-commit-config.yaml  LICENSE  README.md  build.sh  pyproject.toml  requirements.txt
SpatialNode/: __init__.py  abstract_graph_model.py  abstract_graph_model.pyi  abstract_node_geometry.py  abstract_node_geometry.pyi  abstract_node_painter.py  abstract_node_painter.pyi  basic_graphics_scene.py  basic_graphics_scene.pyi  connection_graphics_object.py  connection_graphics_object.pyi  connection_id_utils.py  connection_id_utils.pyi  connection_painter.py  connection_painter.pyi  connection_state.py  connection_state.pyi  connection_style.py  data_flow_graph_model.py  data_flow_graph_model.pyi  data_flow_graphics_scene.py  data_flow_graphics_scene.pyi  default_horizontal_node_geometry.py  default_horizontal_node_geometry.pyi  default_node_painter.py  default_node_painter.pyi  default_vertical_node_geometry.py  default_vertical_node_geometry.pyi  definitions.py  graphics_view.py  graphics_view.pyi  graphics_view_style.py  locate_node.py  locate_node.pyi  node_connection_interaction.py  node_connection_interaction.pyi  node_data.py  node_data.pyi  node_delegate_model.py  node_delegate_model.pyi  (+14 more)
SpatialNode/resources/: __init__.py  resource_rc.py
docs/: SpatialNode.xmind
examples/: hello_qt.py
examples/calculator/: addition_model.py  calculator.py  calculator_headless.py  decimal_data.py  (+6 more)
tests/: test_connection_id_utils.py  test_data_flow_graph_model.py  test_data_flow_graphics_scene.py  test_definitions.py  test_node_delegate_model_registry.py
(+23 files in other folders)
